--- a/rslidar_driver/package.xml
+++ b/rslidar_driver/package.xml
@@ -26,12 +26,12 @@
   <build_depend>message_generation</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>rslidar_input</build_depend>
   <build_depend>pcl_conversions</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>libpcl-all-dev</build_depend>
   <build_depend>rslidar_msgs</build_depend>
   <build_depend>diagnostic_updater</build_depend>
+  <build_depend>libpcap</build_depend>
 
 
   <run_depend>angles</run_depend>
@@ -53,6 +53,7 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>rslidar_msgs</run_depend>
   <run_depend>diagnostic_updater</run_depend>
+  <run_depend>libpcap</run_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet_rslidar.xml"/>
