Install nodelet plugin.

--- a/rslidar_driver/CMakeLists.txt
+++ b/rslidar_driver/CMakeLists.txt
@@ -46,3 +46,6 @@ catkin_package(
 
 add_subdirectory(src)
 
+install(FILES nodelet_rslidar.xml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
