--- a/rslidar_sync/CMakeLists.txt
+++ b/rslidar_sync/CMakeLists.txt
@@ -15,3 +15,9 @@ add_executable(rslidar_sync_3lidar_node src/timesync_3lidar.cpp)
 target_link_libraries(rslidar_sync_3lidar_node
 	${catkin_LIBRARIES}
 )
+
+install(
+  TARGETS rslidar_sync_2lidar_node rslidar_sync_3lidar_node
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
