Add install commands (#4)
* Install libraries, nodes. plugins, launch script and data folder.
* Add argument whether to start rviz (false by default).

--- a/rslidar_pointcloud/CMakeLists.txt
+++ b/rslidar_pointcloud/CMakeLists.txt
@@ -30,3 +30,9 @@ catkin_package(
 )
 
 add_subdirectory(src)
+
+install(FILES nodelets.xml
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
+install(DIRECTORY launch data DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
